--- a/frontend/styles/home.css
+++ b/frontend/styles/home.css
@@ -1,22 +1,8 @@
+body {
+    overflow: hidden;
+}
+
 #welcome-div {
-    display: flex;
-    flex-direction: row;
-}
-
-.welcome-header {
-    cursor: pointer;
-    padding-bottom: 8%;
-    margin: 0;
-    font-size: 9vw;
-    display: block;
-    transform: scaleY(1.05);
-    z-index: 500;
-}
-
-.regular {
-    font-weight: 700;
-}
-
-.thin {
-    font-weight: 100;
+    font-size: 5vw;
+    top: 30%;
 }
