--- a/frontend/styles/main-style.css
+++ b/frontend/styles/main-style.css
@@ -9,8 +9,7 @@ html {
 }
 
 body {
-    overflow-x: hidden;
-    height: 100%;
+    height: 90%;
     width: 100%;
     margin: 0;
     font-family: "Bebas Neue", sans-serif;
@@ -19,10 +18,19 @@ body {
     word-wrap: break-word;
 }
 
+.hblock {
+    overflow-x: hidden;
+}
+
+.vblock {
+    overflow-y: hidden;
+}
+
 #welcome-div {
     margin: 30px;
     display: flex;
     flex-direction: row;
+    text-shadow: 20px 20px 20px #bcbcbc;
 }
 
 .welcome-header {
@@ -33,6 +41,7 @@ body {
     display: block;
     transform: scaleY(1.05);
     z-index: 500;
+    text-shadow: inherit;
 }
 
 .regular {
