--- a/frontend/styles/minor-page.css
+++ b/frontend/styles/minor-page.css
@@ -10,11 +10,12 @@
 #icon-background {
     border-radius: 10%;
     padding: 0.5vh;
-    background-color: #333333;
+    background-color: #000000;
+    text-shadow: 0 0 0;
 }
 #icon-background:hover {
-    background-color: #555555;
+    background-color: #222222;
 }
 #icon-background:active {
-    background-color: #777777;
+    background-color: #444444;
 }
